# thesis-efficient-serverless-computing-with-webassembly

./: master_thesis.bib  thesis.ist  thesis.tex
abstract/: en.tex
chapters/0_abstract/: de.tex  en.tex
chapters/0_acknowledgement/: 0_root.tex
chapters/10_future-work/: 0_root.tex
chapters/1_introduction/: 0_root.tex  1_introduction.tex  2_research_objectives.tex  3_structure_of_the_thesis.tex
chapters/2_wasm/: 0_root.tex  1_wasm.tex  2_wasm_objectives.tex  3_wasm_concepts.tex  4_wat.tex  5_specification.tex  6_wasi.tex
chapters/3_runtimes/: 0_root.tex
chapters/4_poc/: 0_root.tex
chapters/5_benchmarks/: 0_root.tex
chapters/6_limitations/: 0_root.tex
chapters/6_vendor-lock-in/: 0_root.tex
chapters/7_related-work/: 0_root.tex
chapters/7_vendor-lock-in/: 0_root.tex
drawio/: Cloud_Transformation.drawio  Emscripten.drawio  WASI_Architecture.drawio  WASI_portability.drawio  Wizer.drawio  curl_performance_metrics.drawio  evaluation_setup.drawio  poc.drawio  stack_wasm.drawio  v8-isolates.drawio  wasm_gc_1.drawio  wasm_gc_2.drawio
project/runtime_benches/: .gitignore  Cargo.toml  README.md
project/simple_poc_platform/: Cargo.toml  hello-world.wasm
project/simple_poc_platform/as-wasi/: .gitignore  README.md  asconfig.json  hello-world.ts  package.json
project/simple_poc_platform/src/: main.rs
sections/: 10_future-work.tex  1_introduction.tex  2_wasm.tex  3_runtimes.tex  4_poc.tex  6_limitations.tex  7_vendor-lock-in.tex  98_glossary.tex  99_appendices.tex
tables/: tab_active_proposals.tex  tab_runtime_overview.tex
utils/: code_listing.tex
(+99 files in other folders)
