[package]
name = "runtime_benches"
version = "0.1.0"
edition = "2021"
description = "WebAssembly runtime benchmarks for the Master Thesis of Sasan Jaghori"
license = "MIT"
readme = "README.md"

[workspace]
resolver = '2'
members = [
  "wasi/wasm"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
once_cell = "1.18.0"
wasmtime = { version = "10.0.1", features = ['cranelift'] }
wasmtime-wasi = "10.0.1"
tempfile = "3.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
num_cpus = "1.13.0"
env_logger = "0.10.0"


[[bench]]
name = "instantiation"
harness = false

